--- a/compton.conf
+++ b/compton.conf
@@ -1,6 +1,6 @@
 # General
 backend = "glx";
-vsync = "opengl-swc";
+vsync = "true";
 detect-rounded-corners = true;
 xrender-sync = true;
 xrender-sync-fence = true;
