--- a/i3blocks/config
+++ b/i3blocks/config
@@ -27,7 +27,7 @@ interval=20
 signal=7
 
 [weather]
-interval=3600
+interval=18000
 signal=5
 
 [mailbox]
@@ -39,9 +39,9 @@ signal=12
 #interval=30
 #label=🧠
 
-#[cpu]
-#interval=15
-#label=💻
+[cpu]
+interval=15
+label=💻
 
 [volume]
 interval=once
@@ -51,9 +51,9 @@ signal=10
 #interval=60
 #command=disk /
 
-#[disk]
-#interval=60
-#command=disk /home 🏠
+[disk]
+interval=60
+command=disk /home 🏠
 
 [battery]
 command=battery BAT0
