--- a/i3blocks/config
+++ b/i3blocks/config
@@ -1,4 +1,4 @@
-command=~/.scripts/statusbar/$BLOCK_NAME
+command=~/.local/bin/statusbar/$BLOCK_NAME
 separator_block_width=15
 markup=pango
 
@@ -16,6 +16,9 @@ signal=11
 label=📰
 interval=once
 signal=6
+
+#[iplocate]
+#interval=30
 
 [pacpackages]
 label=📦
@@ -35,9 +38,9 @@ label=📬
 interval=180
 signal=12
 
-#[memory]
-#interval=30
-#label=🧠
+[memory]
+interval=30
+label=🧠
 
 [cpu]
 interval=15
@@ -51,9 +54,9 @@ signal=10
 #interval=60
 #command=disk /
 
-[disk]
-interval=60
-command=disk /home 🏠
+#[disk]
+#interval=60
+#command=disk /home 🏠
 
 [battery]
 command=battery BAT0
