--- a/i3/config
+++ b/i3/config
@@ -4,15 +4,18 @@
 # This config file will use environmental variables such as $BROWSER and $TERMINAL.
 # You can set these variables in ~/.profile or ~/.bash_profile if you have it as below:
 #
-# export FILE="ranger"
+#export FILE="ranger"
 # export TERMINAL="st"
+
 
 # #---Basic Definitions---# #
 for_window [class="^.*"] border pixel 2
 gaps inner 15
 gaps outer 15
-set $term --no-startup-id $TERMINAL
+#set $term st
 set $mod Mod4
+set $BROWSER Navigator
+set $TERMINAL st
 
 # #---Dropdown Windows---# #
 # General dropdown window traits. The order can matter.
@@ -32,6 +35,17 @@ bar {
 	position top
 	mode dock
 	modifier None
+
+
+	colors {
+        background #101010
+        statusline #ffffff
+
+        focused_workspace  #ffffff #285577
+        active_workspace   #ffffff #333333
+        inactive_workspace #888888 #222222
+        urgent_workspace   #ffffff #900000
+    }
 }
 
 # #---Basic Bindings---# #
@@ -129,16 +143,16 @@ bindsym $mod+semicolon		workspace next
 bindsym $mod+Shift+slash	kill
 bindsym $mod+backslash		workspace back_and_forth
 
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $ws1 "1: Firefox "
+set $ws2 "2: Sublime "
+set $ws3 "3: Discord "
+set $ws4 "4: Music"
+set $ws5 "5: Steam "
+set $ws6 "6: Video "
+set $ws7 "7: Trans "
+set $ws8 "8: Vifm "
+set $ws9 "9: Spotify"
+set $ws10 "10: Terminals"
 
 # switch to workspace
 bindsym $mod+1		workspace $ws1
@@ -171,15 +185,15 @@ for_window [class="Gimp"] move workspace $ws5
 for_window [window_role="GtkFileChooserDialog"] resize set 800 600
 for_window [window_role="GtkFileChooserDialog"] move position center
 for_window [title="Default - Wine desktop"] floating enable
-for_window [class="Navigator|Firefox"] move to workspace $ws1 focus
-for_window [class="vivaldi|vivaldi-stable"] move to workspace $ws1 focus
+for_window [class="$BROWSER|Navigator|Firefox|firefox"] move to workspace $ws1 focus
+for_window [class="$TERMINAL|st"] move to workspace $ws10 focus
 for_window [class="subl|Subl"] move to workspace $ws2 focus
 for_window [class="discord|Discord"] move to workspace $ws3 focus
 for_window [class="steam|Steam"] move to workspace $ws4 focus
 for_window [class="transmission-gtk|Transmission-gtk"] move to workspace $ws5 focus
 for_window [class="mpv|Mpv"] move to workspace $ws6 focus
 for_window [class="virtualbox|VirtualBox"] move to workspace $ws7 focus
-for_window [class="thunar|Thunar"] move to workspace $ws8 focus
+for_window [class="$TERMINAL -e $FILE|st -e vifm"] move to workspace $ws8 focus
 for_window [class="spotify|Spotify"] move to workspace $ws9 focus
 #for_window [class="discord|Discord"]focus
 
