--- a/i3/config
+++ b/i3/config
@@ -29,24 +29,36 @@ for_window [instance="dropdown_tmuxdd"] border pixel 3
 for_window [instance="dropdown_dropdowncalc"] border pixel 2
 for_window [instance="dropdown_*"] move position center
 
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
+# class                 border  bground text    indicator child_border
+client.focused          #2E8B57 #2F2B26 #C3CDC8 #2E8b57   #2e8b57
+client.focused_inactive #333333 #5F676A #FFFFFF #484E50   #5F676A
+client.unfocused        #333333 #222222 #888888 #292D2E   #222222
+client.urgent           #2F343A #900000 #FFFFFF #900000   #900000
+client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
+
+client.background       #2f2b26
+
 bar {
-	font pango:mono 11
-	status_command i3blocks
-	position top
-	mode dock
-	modifier None
+     status_command i3blocks
+     position top
+     mode dock
+     modifier None
+     
 
-colors {
-    background #2b2b2b
-    statusline #FFFFFF
-    separator  #666666
+  colors {
+    background #2F2B26
+    statusline #C3CDC8
+    separator  #C3CDC8
+    
 
-    focused_workspace  #4C7899 #285577 #FFFFFF
-    active_workspace   #333333 #222222 #FFFFFF
+    focused_workspace  #2E8B57 #2e8b57 #C3CDC8
+    active_workspace   #2E8B57 #2F2B26 #C3CDC8
     inactive_workspace #333333 #222222 #888888
     urgent_workspace   #2F343A #900000 #FFFFFF
-
-   }
+    binding_mode       #2F343A #900000 #FFFFFF
+  }
 }
 
 # #---Basic Bindings---# #
